<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.motechproject.ananya-care</groupId>
    <artifactId>ananya-care</artifactId>
    <packaging>pom</packaging>
    <version>0.5-SNAPSHOT</version>
    <modules>
        <module>ananya-care-web</module>
        <module>ananya-care-scheduling</module>
        <module>ananya-care-dummy-commcare-hq</module>
        <module>ananya-care-functional-tests</module>
    </modules>
    <name>Ananya Care</name>

    <properties>
        <jetty.port>9979</jetty.port>
        <spring.version>3.0.5.RELEASE</spring.version>
        <release.version>${version}</release.version>
        <motech.version>0.10.1</motech.version>
        <motech.contrib.version>0.5-SNAPSHOT</motech.contrib.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <db.server>localhost</db.server>
        <db.port>5984</db.port>
        <db.name.ananya.care>ananya-care</db.name.ananya.care>
        <db.name.motech-scheduletracking>motech-scheduletracking</db.name.motech-scheduletracking>
        <main.basedir>${project.basedir}</main.basedir>
    </properties>

    <distributionManagement>
        <repository>
            <id>motech.nexus.snapshots</id>
            <name>Motech Releases Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/releases</url>
            <uniqueVersion>false</uniqueVersion>
        </repository>
        <snapshotRepository>
            <id>motech.nexus.releases</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>central</id>
            <url>http://repo1.maven.org/maven2</url>
            <name>Repository for dependencies</name>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-maven-release</id>
            <name>Spring Maven Release Repository</name>
            <url>http://maven.springframework.org/release</url>
        </repository>
        <repository>
            <id>spring-maven-milestone</id>
            <name>Spring Maven Milestone Repository</name>
            <url>http://maven.springframework.org/milestone</url>
        </repository>
        <repository>
            <id>motech.nexus.snapshots</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>motech.nexus.releases</id>
            <name>Motech Releases Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/releases</url>
        </repository>
        <repository>
            <id>javax.transaction</id>
            <name>Repository for javax transaction API</name>
            <url>http://mvnrepository.com/artifact/javax.transaction/jta/1.1</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>http://repo1.maven.org/maven2</url>
            <name>Repository for plugins</name>
        </pluginRepository>
        <pluginRepository>
            <id>spring-maven-release</id>
            <name>Spring Maven Release Repository</name>
            <url>http://maven.springframework.org/release</url>
        </pluginRepository>
        <pluginRepository>
            <id>spring-maven-milestone</id>
            <name>Spring Maven Milestone Repository</name>
            <url>http://maven.springframework.org/milestone</url>
        </pluginRepository>
        <pluginRepository>
            <id>jasmine-js-bdd</id>
            <name>Jasmine JavaScript BDD Repository</name>
            <url>http://searls-maven-repository.googlecode.com/svn/trunk/snapshots</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <finalName>ananya-care</finalName>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <outputDirectory/>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.9</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                            <configuration>
                                <argLine>-XX:MaxPermSize=1024M</argLine>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>properties-maven-plugin</artifactId>
                    <version>1.0-alpha-2</version>
                    <executions>
                        <execution>
                            <phase>initialize</phase>
                            <goals>
                                <goal>read-project-properties</goal>
                            </goals>
                            <configuration>
                                <files>
                                    <file>${main.basedir}/build/maven.properties</file>
                                </files>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.6</version>
                    <executions>
                        <execution>
                            <id>Drop DB Before Unit and Repository Tests</id>
                            <phase>process-test-classes</phase>
                            <configuration>
                                <target>
                                    <echo message="Dropping DBs: START"/>
                                    <exec executable="curl">
                                        <arg value="-s"/>
                                        <arg value="-S"/>
                                        <arg value="-X"/>
                                        <arg value="DELETE"/>
                                        <arg value="http://${db.server}:${db.port}/${db.name.ananya.care}"/>
                                        <arg value="http://${db.server}:${db.port}/${db.name.motech-scheduletracking}"/>
                                    </exec>
                                    <echo message="Dropping DB: END"/>
                                </target>
                            </configuration>
                            <goals>
                                <goal>run</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>sql-maven-plugin</artifactId>
                    <version>1.5</version>

                    <dependencies>
                        <!-- specify the dependent jdbc driver here -->
                        <dependency>
                            <groupId>postgresql</groupId>
                            <artifactId>postgresql</artifactId>
                            <version>9.1-901.jdbc4</version>
                        </dependency>
                    </dependencies>

                    <!-- common configuration shared by all executions -->
                    <configuration>
                        <driver>org.postgresql.Driver</driver>
                        <url>jdbc:postgresql://${postgres.server}:${postgres.port}:postgres</url>
                        <username>${postgres.other.user}</username>
                        <password>${postgres.other.password}</password>
                        <!--all executions are ignored if -Dmaven.test.skip=true-->
                        <skip>${maven.test.skip}</skip>
                    </configuration>

                    <executions>
                        <execution>
                            <id>drop-quartz-db</id>
                            <phase>pre-integration-test</phase>
                            <goals>
                                <goal>execute</goal>
                            </goals>
                            <configuration>
                                <!-- need another database to drop the targeted one -->
                                <url>jdbc:postgresql://${postgres.server}:${postgres.port}:postgres</url>
                                <autocommit>true</autocommit>
                                <sqlCommand>drop database ${postgres.db}</sqlCommand>
                                <!-- ignore error when database is not available -->
                                <onError>continue</onError>
                            </configuration>
                        </execution>
                        <execution>
                            <id>create-quartz-db</id>
                            <phase>pre-integration-test</phase>
                            <goals>
                                <goal>execute</goal>
                            </goals>
                            <configuration>
                                <!-- need another database to drop the targeted one -->
                                <url>jdbc:postgresql://${postgres.server}:${postgres.port}:postgres</url>
                                <username>${postgres.other.user}</username>
                                <password>${postgres.other.password}</password>
                                <autocommit>true</autocommit>
                                <sqlCommand>create database ${postgres.db}</sqlCommand>
                                <!-- ignore error when database is not available -->
                                <onError>abort</onError>
                            </configuration>
                        </execution>

                        <execution>
                            <id>create-schema</id>
                            <phase>pre-integration-test</phase>
                            <goals>
                                <goal>execute</goal>
                            </goals>
                            <configuration>
                                <url>jdbc:postgresql://${postgres.server}:${postgres.port}/${postgres.db}</url>
                                <username>${postgres.user}</username>
                                <password>${postgres.password}</password>
                                <autocommit>true</autocommit>
                                <srcFiles>
                                    <srcFile>../build/sql/tables_postgres.sql</srcFile>
                                </srcFiles>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
    </build>
    <dependencies>
        <!-- Spring 3 dependencies -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.8.3</version>
        </dependency>
        <dependency>
            <groupId>org.motechproject</groupId>
            <artifactId>motech-testing-utils</artifactId>
            <version>${motech.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.5</version>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>1.4.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>1.4.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.1</version>
        </dependency>

        <dependency>
            <groupId>org.ektorp</groupId>
            <artifactId>org.ektorp</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.ektorp</groupId>
            <artifactId>org.ektorp.spring</artifactId>
            <version>1.1.1</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>DefaultDevProfile</id>
            <activation><activeByDefault>true</activeByDefault></activation>
           <build>
               <plugins>
                   <plugin>
                       <groupId>org.apache.maven.plugins</groupId>
                       <artifactId>maven-surefire-plugin</artifactId>
                       <version>2.7.2</version>
                       <configuration>
                           <excludes>
                               <exclude>**/qa/*.java</exclude>
                           </excludes>
                       </configuration>
                   </plugin>
               </plugins>
           </build>
        </profile>
        <profile>
            <id>qae2e</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.9</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                                <configuration>
                                    <argLine>-XX:MaxPermSize=1024M</argLine>
                                    <includes>
                                        <include>**/qa/*.java</include>
                                    </includes>

                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.7.2</version>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>
    <scm>
        <connection>scm:git:https://github.com/motech/ananya-care</connection>
        <developerConnection>scm:git:https://github.com/motech/ananya-care</developerConnection>
        <url>https://github.com/motech/ananya-care</url>
    </scm>
</project>